--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="Detailed information related to Game Boy compression methods.">
 		<meta name="author" content="tmk">
-		<link rel="icon" href="../../../../favicon.ico">
+		<link rel="icon" href="/favicon.ico">
 
 		<title>Game Boy Compression Playground</title>
 
-		<link rel="canonical" href="https://getbootstrap.com/docs/4.1/examples/starter-template/">
+		<link rel="canonical" href="https://gitendo.github.io/gbcp/">
 
 		<!-- Bootstrap core CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 		<!-- Custom styles for this template -->
 		<style type="text/css">
-			.even {background-color: rgba(255, 255, 255) !important;}
+			.even {background-color: rgba(255, 255, 255, 0) !important;}
 			.odd {background-color: rgba(0, 0, 0, 0.05);}
 		</style>
 	</head>
@@ -276,7 +276,7 @@
 				<p>As you can see there's no clear winner. Compression was always about speed vs. size and it's no different here. RNC method 1 does the best job packing tile data but unoptimized unpacker is slowest, largest and needs a lot of RAM. PuCrunch is second being 21 bytes behind but wins when it comes to attributes file. Then we have C64Pack, just 2 bytes behind PuCrunch. Map file was too much for gb-lzss, RNC method 2 and SWD32 which failed miserably. Surprisingly kirbyLzRle, which uses mixed LZ-RLE based on HAL Laboratory packer, wins hand down here. GB Compress wins honorable mention being the fastest - apparently unpacking map file is faster than copying it usual way!</p>
 				<div class="card">
 					<div class="card-body text-center">
-						If you have any packer(s) not listed here why not letting me know? :)
+						If you have any packer(s) not listed here why not <a href="https://github.com/gitendo">letting me know</a>? :)
 					</div>
 				</div>
 				<br>
