--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="Detailed information related to Game Boy compression methods.">
 		<meta name="author" content="tmk">
-		<link rel="icon" href="/favicon.ico">
+		<link rel="icon" href="gbcp/favicon.ico">
 
 		<title>Game Boy Compression Playground</title>
 
