--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-	<title>Title</title>
+	<title>Game Boy Compression Playground</title>
 	<meta charset="utf-8">
 	<meta name="author" content="tmk">
 	<meta name="description" content="Detailed information related to Game Boy compression methods.">
