moved site to another branch and changed folder structure

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	<!-- UIkit JS -->
 	<script src="https://cdn.jsdelivr.net/npm/uikit@3.6.21/dist/js/uikit.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/uikit@3.6.21/dist/js/uikit-icons.min.js"></script>
-	<script src="data.js.min"></script>
-	<script src="changelog.js.min"></script>
-	<script src="parse.js.min"></script>
+	<script src="js/data.js.min"></script>
+	<script src="js/changelog.js.min"></script>
+	<script src="js/parse.js.min"></script>
 </head>
 <body>
 	<header class="uk-container uk-container-center uk-text-center uk-margin-medium-top">
@@ -25,7 +25,7 @@
 		<div class="" uk-grid="masonry: true">
 			<div class="uk-grid-item-match">
 				<div class="uk-card uk-card-default uk-card-small uk-card-body ">
-					<img data-src="cenotaph.gif" width="160" height="144" alt="Cenotaph" title="Picture by thUg" uk-tooltip uk-img>
+					<img data-src="img/cenotaph.gif" width="160" height="144" alt="Cenotaph" title="Picture by thUg" uk-tooltip uk-img>
 				</div>
 			</div>
 			<div class="uk-card uk-card-body uk-card-small uk-text-justify uk-width-expand@m">
